--- a/src/games/index.html
+++ b/src/games/index.html
@@ -8,5 +8,29 @@
 <body>
     <div id="game"></div>
     <script type="module" src="/main.js"></script>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCrZw1nIwHHoglV-L1AcOrcXasDRrFg0A8",
+    authDomain: "raceme-54047.firebaseapp.com",
+    databaseURL: "https://raceme-54047-default-rtdb.firebaseio.com",
+    projectId: "raceme-54047",
+    storageBucket: "raceme-54047.appspot.com",
+    messagingSenderId: "530870651607",
+    appId: "1:530870651607:web:6806b1b42ea85d1d5a7e92",
+    measurementId: "G-S7RNR562MT"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
