--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <title>Play | Gamba</title>
+    <title>Banabets - The next generation Casino</title>
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="apple-touch-icon" href="/icon-512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -21,3 +21,4 @@
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
+<center><script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script> <div class="livecoinwatch-widget-5" lcw-base="USD" lcw-color-tx="#ffffff" lcw-marquee-1="movers" lcw-marquee-2="none" lcw-marquee-items="10" lcw-platform="SOL" ></div></center>
