--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
-<center>      <Buttons>
-        <button onClick={copyInvite}>
-          💸 INVITE
-        </button>
-          <button onClick={() => window.open('https://discord.gg/banabets', '_blank')}>
-          💬 DISCORD
-        </button>
-        <button onClick={() => window.open('https://x.com/banabets', '_blank')}>
-          🚀 TWITTER
-        </button><script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script> <div class="livecoinwatch-widget-5" lcw-base="USD" lcw-color-tx="#ffffff" lcw-marquee-1="movers" lcw-marquee-2="none" lcw-marquee-items="10" lcw-platform="SOL" ></div></center>
+<center> <script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script> <div class="livecoinwatch-widget-5" lcw-base="USD" lcw-color-tx="#ffffff" lcw-marquee-1="movers" lcw-marquee-2="none" lcw-marquee-items="10" lcw-platform="SOL" ></div></center>
+      <GambaUi.Button main onClick={() => window.open(`${EXPLORER_URL}/platform/${PLATFORM_CREATOR_ADDRESS.toString()}`)}>
+        🚀 Explorer
+      </GambaUi.Button>
